# onecscripting

./: .gitignore  Makefile  README.md  README.ru.md  pyproject.toml  requirements.txt
examples/: onecguitasks.py
onecscripting/: dbobj.py  errors.py  infobase.py  query.py  session.py  utils.py
src/onecscripting/: dbobj.py  infobase.py  query.py
tests/: test_config.ini  test_connection.py  test_scripting.py
